富山市に吸収合併された婦負郡＆上新川郡の7町村を復活！
他の消滅町村はは面倒臭いので後回し

--- a/lib/data/addresses.yml
+++ b/lib/data/addresses.yml
@@ -12,6 +12,12 @@ addresses:
     - ['小矢部市', 'おやべし', 'オヤベシ']
     - ['南砺市', 'なんとし', 'ナントシ']
     - ['射水市', 'いみずし', 'イミズシ']
+    - ['婦負郡婦中町', 'ねいぐんふちゅうまち', 'ネイグンフチュウマチ']
+    - ['婦負郡八尾町', 'ねいぐんやつおまち', 'ネイグンヤツオマチ']
+    - ['婦負郡山田村', 'ねいぐんやまだむら', 'ネイグンヤマダムラ']
+    - ['婦負郡細入村', 'ねいぐんほそいりむら', 'ネイグンホソイリムラ']
+    - ['上新川郡大沢野町', 'かみにいかわぐんおおさわのまち', 'カミニイカワグンオオサワノマチ']
+    - ['上新川郡大山町', 'かみにいかわぐんおおやままち', 'カミニイカワグンオオヤママチ']
     - ['中新川郡舟橋村', 'なかにいかわぐんふなはしむら', 'ナカニイカワグンフナハシムラ']
     - ['中新川郡上市町', 'なかにいかわぐんかみいちまち', 'ナカニイカワグンカミイチマチ']
     - ['中新川郡立山町', 'なかにいかわぐんたてやままち', 'ナカニイカワグンタテヤママチ']
